changed to postgresql db, pws hidden, fixed problem where no sport or boulder routes would break the page, fixed resposivnes of perfil

--- a/climb_log_webapp/static/climb_log_webapp/profile.css
+++ b/climb_log_webapp/static/climb_log_webapp/profile.css
@@ -28,6 +28,6 @@ hr{
 }
 
 .bottom{
-    min-height: fit-content;
+    min-height: 25rem;
     padding: 2rem 1rem;
 }
